--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 strategyType:
 enableSelector:
-deploymentApiVersion: extensions/v1beta1
+deploymentApiVersion: apps/v1
 image:
   repository: gitlab.example.com/group/project
   tag: stable
