--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -54,6 +54,8 @@ ingress:
     #   - variable: ""
     #     operator: ""
     #     action: ""
+  canary:
+    weight:
 prometheus:
   metrics: false
 livenessProbe:
