--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -53,6 +53,7 @@ publish-dryrun:
   script:
     - semantic-release -d |tee output.log
     # Check if the bundled chart version matches the next auto-deploy-image version.
+    - git diff @..@^ --name-only | grep 'assets/auto-deploy-app' || echo 'This change does not contain changes for the chart. Skip the validation' && exit 0
     - next_release_version=$(cat output.log | grep -oP "The next release version is \K.*$") || true
     - bundled_chart_version=$(cat assets/auto-deploy-app/Chart.yaml | grep -oP "version:\s*\K.*$")
     - echo "next_release_version is $next_release_version"
