--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -332,6 +332,35 @@ test-deploy-postgresql-channel-1:
     - helm get values production --output json | grep "postgres://user:testing-password@production-postgres:5432/production"
     - ./test/verify-deployment-database production production-postgres
 
+test-scale-does-not-create-old-postgres:
+  extends: test-deploy
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - auto-deploy scale
+    - exist=$(auto-deploy check_old_postgres_exist)
+    - |
+      if [[ "$exist" != "false" ]]; then
+        echo "Old Postgres should not exist"
+        exit 1
+      fi
+
+test-scale-does-not-delete-old-postgres:
+  extends: test-deploy
+  script:
+    - export AUTO_DEVOPS_POSTGRES_CHANNEL=1
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - auto-deploy scale
+    - exist=$(auto-deploy check_old_postgres_exist)
+    - |
+      if [[ "$exist" != "true" ]]; then
+        echo "Old Postgres should exist"
+        exit 1
+      fi
+
 test-deploy-does-not-delete-old-postgres-by-default:
   extends: test-deploy
   script:
