--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -22,6 +22,7 @@ chart:compile_manifests:
   script:
     - mkdir manifests
     - helm init --client-only
+    - helm repo add stable-archive https://gitlab-org.gitlab.io/cluster-integration/helm-stable-archive
     - helm dependency build .
     - helm template -f values.yaml --output-dir manifests .
   artifacts:
@@ -43,6 +44,7 @@ chart:test:
   script:
     - apk add --no-cache build-base go
     - helm init --client-only
+    - helm repo add stable-archive https://gitlab-org.gitlab.io/cluster-integration/helm-stable-archive
     - helm dependency build .
     - cd test && GO111MODULE=auto go test .
 
