--- a/assets/auto-deploy-app/requirements.yaml
+++ b/assets/auto-deploy-app/requirements.yaml
@@ -1,5 +1,7 @@
 dependencies:
+  # This is a legacy in-cluster PostgreSQL dependency that is no longer used for newer installations.
+  # We can remove this dependency when we drop support for the legacy instances.
   - name: postgresql
     version: "0.7.1"
-    repository: "https://kubernetes-charts.storage.googleapis.com/"
+    repository: "@stable-archive"
     condition: postgresql.enabled
