--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -282,6 +282,18 @@ test-deploy:
     - helm get values production --output json | grep "postgres://user:testing-password@production-postgresql:5432/production"
     - ./test/verify-deployment-database production postgresql
 
+test-deploy-postgres-disabled:
+  extends: test-deploy
+  variables:
+    POSTGRES_ENABLED: "false"
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - helm get production
+    - helm list > releases.txt
+    - if grep -q "postgres" releases.txt; then echo "postgresql should not be installed"; exit 1; fi
+
 test-deploy-atomic:
   extends: test-deploy
   variables:
@@ -331,6 +343,18 @@ test-deploy-postgresql-channel-1:
     - helm get production
     - helm get values production --output json | grep "postgres://user:testing-password@production-postgres:5432/production"
     - ./test/verify-deployment-database production production-postgres
+
+test-deploy-postgresql-channel-1-disabled:
+  extends: test-deploy-postgresql-channel-1
+  variables:
+    POSTGRES_ENABLED: "false"
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - helm get production
+    - helm get manifest production > manifest.txt
+    - if grep -q "postgres-password" manifest.txt; then echo "postgresql should not be installed"; exit 1; fi
 
 test-scale-does-not-create-old-postgres:
   extends: test-deploy
