fix: Use official new location for stable-repo-url
This fixes issues with users pulling in other charts from the stable
repository as the official repo hosts the complete set of charts.

--- a/assets/auto-deploy-app/requirements.yaml
+++ b/assets/auto-deploy-app/requirements.yaml
@@ -3,5 +3,5 @@ dependencies:
   # We can remove this dependency when we drop support for the legacy instances.
   - name: postgresql
     version: "0.7.1"
-    repository: "@stable-archive"
+    repository: "@stable"
     condition: postgresql.enabled
