--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -21,8 +21,7 @@ chart:compile_manifests:
   stage: build
   script:
     - mkdir manifests
-    - helm init --client-only
-    - helm repo add stable-archive https://gitlab-org.gitlab.io/cluster-integration/helm-stable-archive
+    - helm init --client-only --stable-repo-url=https://charts.helm.sh/stable
     - helm dependency build .
     - helm template -f values.yaml --output-dir manifests .
   artifacts:
@@ -43,8 +42,7 @@ chart:test:
   stage: test
   script:
     - apk add --no-cache build-base go
-    - helm init --client-only
-    - helm repo add stable-archive https://gitlab-org.gitlab.io/cluster-integration/helm-stable-archive
+    - helm init --client-only --stable-repo-url=https://charts.helm.sh/stable
     - helm dependency build .
     - cd test && GO111MODULE=auto go test .
 
