--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -116,6 +116,18 @@ workers: {}
   #   - procfile
   #   - start
   #   - worker
+  #   livenessProbe:
+  #     path: "/"
+  #     initialDelaySeconds: 15
+  #     timeoutSeconds: 15
+  #     scheme: "HTTP"
+  #     probeType: "httpGet"
+  #   readinessProbe:
+  #     path: "/"
+  #     initialDelaySeconds: 5
+  #     timeoutSeconds: 3
+  #     scheme: "HTTP"
+  #     probeType: "httpGet"
   #   preStopCommand:
   #   - /bin/herokuish
   #   - procfile
