feat: add startup probes to protect slow starting containers
https://gitlab.com/gitlab-org/cluster-integration/auto-deploy-image/-/issues/134

Signed-off-by: Rémy Coutable <remy@rymai.me>

--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -114,6 +114,15 @@ readinessProbe:
   timeoutSeconds: 3
   scheme: "HTTP"
   probeType: "httpGet"
+startupProbe:
+  enabled: false
+  path: "/"
+  initialDelaySeconds: 5
+  timeoutSeconds: 3
+  failureThreshold: 30
+  periodSeconds: 10
+  scheme: "HTTP"
+  probeType: "httpGet"
 
 #hostAliases:
 #- ip: X.X.X.X
