--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -174,6 +174,26 @@ spec:
 {{- end }}
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+{{- if .Values.startupProbe.enabled }}
+        startupProbe:
+{{- if eq .Values.startupProbe.probeType "httpGet" }}
+          httpGet:
+            path: {{ .Values.startupProbe.path }}
+            scheme: {{ .Values.startupProbe.scheme }}
+            port: {{ .Values.startupProbe.port | default .Values.service.internalPort }}
+{{- else if eq .Values.startupProbe.probeType "tcpSocket" }}
+          tcpSocket:
+            port: {{ .Values.startupProbe.port | default .Values.service.internalPort }}
+{{- else if eq .Values.startupProbe.probeType "exec" }}
+          exec:
+            command:
+{{ toYaml .Values.startupProbe.command | indent 14 }}
+{{- end }}
+          initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+          timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
+          failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+          periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+{{- end }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
 {{- if .Values.persistence.enabled }}
