feat: Update Helm to 2.17.0 and kubectl to 1.15.12
This also includes an alpine upgrade.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ workflow:
 variables:
   DOCKER_DRIVER: overlay2
 
-  HELM_VERSION: 2.16.9
-  KUBERNETES_VERSION: 1.13.12
+  HELM_VERSION: 2.17.0
+  KUBERNETES_VERSION: 1.15.12
+  ALPINE_VERSION: '3.12'
   GLIBC_VERSION: 2.31-r0
 
   BUILD_IMAGE_NAME: "$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:$CI_COMMIT_SHA"
