--- a/.gitlab/ci/release.gitlab-ci.yml
+++ b/.gitlab/ci/release.gitlab-ci.yml
@@ -53,8 +53,8 @@ publish-dryrun:
   script:
     - semantic-release -d |tee output.log
     # Check if the bundled chart version matches the next auto-deploy-image version.
-    - git diff @..@^ --name-only | grep 'assets/auto-deploy-app'
-    - if [[ "$?" != "0" ]]; then echo 'This change does not contain changes for the chart. Skip the validation' && exit 0; fi
+    - has_chart_changes=$(git diff @..@^ --name-only | grep 'assets/auto-deploy-app' && exit 0 || echo -n)
+    - if [ -z "$has_chart_changes" ]; then echo 'This change does not contain changes for the chart. Skip the validation'; exit 0; fi
     - next_release_version=$(cat output.log | grep -oP "The next release version is \K.*$") || true
     - bundled_chart_version=$(cat assets/auto-deploy-app/Chart.yaml | grep -oP "version:\s*\K.*$")
     - echo "next_release_version is $next_release_version"
@@ -64,7 +64,7 @@ publish-dryrun:
         cat <<- EOS
       [WARN] auto-deploy-app chart version outdated!
       This merge request changes auto-deploy-app chart, however, the chart version is not updated yet.
-      Please set ${next_release_version} to the version column in assets/auto-deploy-app/Chart.yaml to resovle this error.
+      Please set ${next_release_version} to the version column in assets/auto-deploy-app/Chart.yaml to resolve this error.
       EOS
       exit 1
       fi
