--- a/.gitlab/ci/build.gitlab-ci.yml
+++ b/.gitlab/ci/build.gitlab-ci.yml
@@ -10,6 +10,7 @@ build:
        docker build
        --build-arg "HELM_VERSION=$HELM_VERSION"
        --build-arg "KUBERNETES_VERSION=$KUBERNETES_VERSION"
+       --build-arg "ALPINE_VERSION=$ALPINE_VERSION"
        --build-arg "GLIBC_VERSION=$GLIBC_VERSION"
        --tag "$BUILD_IMAGE_NAME" .
     - docker push "$BUILD_IMAGE_NAME"
