--- a/assets/auto-deploy-app/templates/worker-deployment.yaml
+++ b/assets/auto-deploy-app/templates/worker-deployment.yaml
@@ -43,6 +43,18 @@ items:
       spec:
         imagePullSecrets:
   {{ toYaml $.Values.image.secrets | indent 12 }}
+{{- with $nodeSelectorConfig := default $.Values.nodeSelector $workerConfig.nodeSelector -}}
+{{- if $nodeSelectorConfig  }}
+        nodeSelector:
+{{ toYaml $nodeSelectorConfig | indent 10 }}
+{{- end }}
+{{- end }}
+{{- with $tolerationsConfig := default $.Values.tolerations $workerConfig.tolerations -}}
+{{- if $tolerationsConfig  }}
+        tolerations:
+{{ toYaml $tolerationsConfig | indent 10 }}
+{{- end }}
+{{- end }}
         terminationGracePeriodSeconds: {{ $workerConfig.terminationGracePeriodSeconds }}
         containers:
         - name: {{ $.Chart.Name }}-{{ $workerName }}
