Update Ruby to 2.7 on RSpec
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -460,8 +460,8 @@ test-upgrade-from-helm2-fails:
 
 rspec:
   stage: test
-  image: ruby:2.5
+  image: ruby:2.7
   before_script:
-    - gem install rspec
+    - gem install --no-document rspec
   script:
     - rspec test/rspec
