--- a/.gitlab/ci/shellcheck.gitlab-ci.yml
+++ b/.gitlab/ci/shellcheck.gitlab-ci.yml
@@ -8,8 +8,7 @@ test-shellcheck:
 test-shfmt:
   stage: test
   image:
-    name: peterdavehello/shfmt:2.6.4
-    entrypoint: ["/bin/sh", "-c"]
+    name: mvdan/shfmt:v3.2.1-alpine
   needs: []
   script:
     - shfmt -i 2 -ci -l -d src/bin/auto-deploy test/verify-application-secret test/verify-deployment-database
