--- a/.gitlab/ci/chart.gitlab-ci.yml
+++ b/.gitlab/ci/chart.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   SCAN_KUBERNETES_MANIFESTS: "true"
 
 include:
-  - template: SAST.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
 
 stages:
   - test
