--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -1,3 +1,6 @@
+include:
+  - template: Security/Secret-Detection.gitlab-ci.yml
+
 .test-job: &test-job
   stage: test
   image: "$BUILD_IMAGE_NAME"
