Introduce serviceAccountName, ingress.path, ingress.tls.useDefaultSecret config options for Auto Deploy

--- a/assets/auto-deploy-app/templates/deployment.yaml
+++ b/assets/auto-deploy-app/templates/deployment.yaml
@@ -40,6 +40,9 @@ spec:
         tier: "{{ .Values.application.tier }}"
         release: {{ .Release.Name }}
     spec:
+{{- if .Values.serviceAccountName }}
+      serviceAccountName: {{ .Values.serviceAccountName | quote }}
+{{- end }}        
       imagePullSecrets:
 {{ toYaml .Values.image.secrets | indent 10 }}
       containers:
