--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 strategyType:
+serviceAccountName:
 image:
   repository: gitlab.example.com/group/project
   tag: stable
@@ -39,9 +40,11 @@ service:
   internalPort: 5000
 ingress:
   enabled: true
+  path: "/"
   tls:
     enabled: true
     secretName: ""
+    useDefaultSecret: false
   annotations:
     kubernetes.io/ingress.class: "nginx"
   modSecurity:
