Added ingress.tls.acme value
Allow specifiying value for  annotation.

--- a/assets/auto-deploy-app/templates/ingress.yaml
+++ b/assets/auto-deploy-app/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
 {{ toYaml .Values.ingress.annotations | indent 4 }}
 {{- end }}
 {{- if .Values.ingress.tls.enabled }}
-    kubernetes.io/tls-acme: "true"
+    kubernetes.io/tls-acme: {{ .Values.ingress.tls.acme | quote }}
 {{- end }}
 {{- if eq .Values.application.track "canary" }}
     nginx.ingress.kubernetes.io/canary: "true"
