--- a/assets/auto-deploy-app/values.yaml
+++ b/assets/auto-deploy-app/values.yaml
@@ -10,6 +10,7 @@ image:
   pullPolicy: IfNotPresent
   secrets:
     - name: gitlab-registry
+extraLabels: {}
 podAnnotations: {}
 application:
   track: stable
@@ -81,7 +82,7 @@ resources:
 #  limits:
 #    cpu: 100m
 #    memory: 128Mi
-  requests:
+  requests: {}
 #    cpu: 100m
 #    memory: 128Mi
 
