--- a/assets/auto-deploy-app/templates/db-migrate-hook.yaml
+++ b/assets/auto-deploy-app/templates/db-migrate-hook.yaml
@@ -4,10 +4,7 @@ kind: Job
 metadata:
   name: {{ template "trackableappname" . }}-db-migrate
   labels:
-    app: {{ template "appname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version| replace "+" "_" }}"
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+{{ include "sharedlabels" . | indent 4 }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation
