--- a/assets/auto-deploy-app/templates/network-policy.yaml
+++ b/assets/auto-deploy-app/templates/network-policy.yaml
@@ -4,10 +4,7 @@ kind: NetworkPolicy
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    app: {{ template "appname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+{{ include "sharedlabels" . | indent 4}}
 spec:
 {{ toYaml .Values.networkPolicy.spec | indent 2 }}
 {{- end -}}
