--- a/assets/auto-deploy-app/templates/service.yaml
+++ b/assets/auto-deploy-app/templates/service.yaml
@@ -12,11 +12,8 @@ metadata:
     prometheus.io/port: "{{ .Values.service.internalPort }}"
 {{- end }}
   labels:
-    app: {{ template "appname" . }}
     track: "{{ .Values.application.track }}"
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+{{ include "sharedlabels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
