--- a/assets/auto-deploy-app/templates/ingress.yaml
+++ b/assets/auto-deploy-app/templates/ingress.yaml
@@ -1,5 +1,11 @@
 {{- if and (.Values.service.enabled) (or (.Values.ingress.enabled) (not (hasKey .Values.ingress "enabled"))) -}}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+apiVersion: networking.k8s.io/v1
+{{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress"}}
+apiVersion: networking.k8s.io/v1beta1
+{{ else }}
 apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ template "fullname" . }}
@@ -59,9 +65,19 @@ spec:
       &httpRule
       paths:
       - path: {{ .Values.ingress.path | default "/" | quote }}
+        {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+        pathType: Prefix
+        {{- end }}
         backend:
+          {{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+          service:
+            name: {{ template "fullname" . }}
+            port:
+              number: {{ .Values.service.externalPort }}
+          {{ else }}
           serviceName: {{ template "fullname" . }}
           servicePort: {{ .Values.service.externalPort }}
+          {{- end }}
 {{- if .Values.service.commonName }}
   - host: {{ template "hostname" .Values.service.commonName }}
     http:
